# expo-modules-windows

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  ExpoModulesWindowsCore.podspec  LICENSE  README.md  package.json  tsconfig.build.json  tsconfig.json
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: config.yml
.yarn/patches/: expo-desktop-modules-core-npm-54.0.9-2fabdc7f11.patch
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/expomoduleswindowscore/: ExpoModulesWindowsCoreModule.kt  ExpoModulesWindowsCorePackage.kt
cpp/: expo-modules-windows-core.cpp  expo-modules-windows-core.h
docs/: AUTOLINKING.md  BUILD_SYSTEM.md  CODE_FLOW.md  DESIGN.md  DESIGN_VIEWS.md  EXPO_CPP_LAYER_INTEGRATION_SPEC.md  EXPO_DESKTOP.md  HOSTFXR_POC_RESULTS.md  IMPLEMENTATION_PROMPTS.md  JSON_vs_Reflection.md  RESEARCH_AUTOLINKING.md  RESEARCH_DSL.md  RESEARCH_HOSTFXR_POC.md  RESEARCH_VIEWS.md  RESEARCH_VIEWS_QUESTIONS.md  STEP2_POSTMORTEM.md  STEP3_POSTMORTEM.md  STEP5_PLAN.md  _Modern Windows App Development Stack .md
docs/prompts/: 01_CSHARP_CORE_LIBRARY.md  02_CPP_HOST_OBJECT.md  03_BUILD_INTEGRATION.md  04_AUTOLINKING_FORK.md  05_AUTOLINKING_BUILD_INTEGRATION.md
dotnet/Expo.Modules.Core/: AppContext.cs  Expo.Modules.Core.csproj  ExpoView.cs  FunctionDescriptor.cs  Module.cs  ModuleDefinition.cs  ModuleRegistry.cs  TypeConverter.cs  ViewDefinition.cs  ViewRegistry.cs
dotnet/Expo.Modules.Core.Tests/: CodedExceptionTests.cs  Expo.Modules.Core.Tests.csproj  FunctionDescriptorTests.cs  ModuleRegistryTests.cs  TypeConverterTests.cs  ViewDefinitionTests.cs
dotnet/Expo.Modules.HostTest/: Expo.Modules.HostTest.csproj  HostTest.cs
example/: app.json  metro.config.js  package.json
example/android/: settings.gradle
example/ios/: Podfile
example/src/: App.tsx
example/windows/: ExpoModulesWindowsCoreExample.sln
ios/: ExpoModulesWindowsCore.h  ExpoModulesWindowsCore.mm
src/: NativeExpoModulesWindowsCore.ts  index.tsx  react-native-internals.d.ts
test/hostfxr-poc/: CMakeLists.txt  README.md  build.bat  build.sh  main.cpp
windows/: ExpoModulesWindowsCore.sln
windows/ExpoModulesWindowsCore/: ExpoAsyncCallback.h  ExpoEventBridge.h  ExpoManagedDeploy.targets  ExpoMarshal.cpp  ExpoMarshal.h  ExpoModuleDecorator.cpp  ExpoModuleDecorator.h  ExpoModuleHost.cpp  ExpoModuleHost.h  ExpoModuleObject.cpp  pch.h  (+15 more)
(+33 files in other folders)
